--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
     <title>nexter &mdash; your home, your freedom</title>
   </head>
-  <body class="container"></body>
+  <body class="container">
+    TEST TEXT
+  </body>
 </html>
