--- a/index.html
+++ b/index.html
@@ -21,7 +21,68 @@
 
     <div class="realtors">Top 3 realtors</div>
 
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-global"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+        <p class="feature__text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          distinctio necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-trophy"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+        <p class="feature__text">
+          Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus
+          rerum sed a eligendi aut quia.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-map-pin"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">All homes in top location</h4>
+        <p class="feature__text">
+          Tenetur distinctio necessitatibus pariatur voluptatibus quidem
+          consequatur harum.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-key"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+        <p class="feature__text">
+          Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit
+          amet consectetur adipisicing elit.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-presentation"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Top one percent realtors</h4>
+        <p class="feature__text">
+          Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio
+          necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="assets/sprite.svg#icon-lock"
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
+        <p class="feature__text">
+          Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia
+          quae.
+        </p>
+      </div>
+    </section>
 
     <div class="story__pictures">Story Pictures</div>
 
