--- a/index.html
+++ b/index.html
@@ -84,9 +84,27 @@
       </div>
     </section>
 
-    <div class="story__pictures">Story Pictures</div>
+    <div class="story__pictures">
+      <img
+        src="assets/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__image--1"
+      />
+      <img src="assets/story-2.jpeg" alt="New house" class="story__image--2" />
+    </div>
 
-    <div class="story__content">Story Content</div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-sm">Happy Customers</h3>
+      <h2 class="heading-2 heading-2--dark mb-md">
+        &ldquo;The best decision of our lives&rdquo;
+      </h2>
+      <p class="story__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+        distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
+        harum volupta!
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
 
     <section class="homes">Homes</section>
 
