--- a/index.html
+++ b/index.html
@@ -298,7 +298,106 @@
       </div>
     </section>
 
-    <section class="gallery">Gallery</section>
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img
+          src="assets/gal-1.jpeg"
+          alt="Gallery image 1"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img
+          src="assets/gal-2.jpeg"
+          alt="Gallery image 2"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img
+          src="assets/gal-3.jpeg"
+          alt="Gallery image 3"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img
+          src="assets/gal-4.jpeg"
+          alt="Gallery image 4"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img
+          src="assets/gal-5.jpeg"
+          alt="Gallery image 5"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img
+          src="assets/gal-6.jpeg"
+          alt="Gallery image 6"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img
+          src="assets/gal-7.jpeg"
+          alt="Gallery image 7"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img
+          src="assets/gal-8.jpeg"
+          alt="Gallery image 8"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img
+          src="assets/gal-9.jpeg"
+          alt="Gallery image 9"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img
+          src="assets/gal-10.jpeg"
+          alt="Gallery image 10"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img
+          src="assets/gal-11.jpeg"
+          alt="Gallery image 11"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img
+          src="assets/gal-12.jpeg"
+          alt="Gallery image 12"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img
+          src="assets/gal-13.jpeg"
+          alt="Gallery image 13"
+          class="gallery__image"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img
+          src="assets/gal-14.jpeg"
+          alt="Gallery image 14"
+          class="gallery__image"
+        />
+      </figure>
+    </section>
 
     <footer class="footer">Footer</footer>
   </body>
