Building the Header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
       <button class="nav-btn"></button>
     </div>
 
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="assets/logo.png" alt="Nexter logo" class="header__logo" />
+      <h3 class="heading-3">Your own home:</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn header__btn">View your properties</button>
+      <div class="header__seenon-text">As seen on</div>
+      <div class="header__seenon-logos">
+        <img src="assets/logo-bbc.png" alt="Logo bbc" />
+        <img src="assets/logo-forbes.png" alt="Logo forbes" />
+        <img src="assets/logo-techcrunch.png" alt="Logo techcrunch" />
+        <img src="assets/logo-bi.png" alt="Logo bi" />
+      </div>
+    </header>
 
     <div class="realtors">Top 3 realtors</div>
 
